Added Membership page and more

--- a/about/about-firm-foundation.html
+++ b/about/about-firm-foundation.html
@@ -151,15 +151,15 @@
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center">
                                 <div class="flex-shrink-0 btn-xl-square bg-light me-3">
-                                    <i class="fa fa-users-cog fa-2x text-primary"></i>
+                                    <img src="../img/badge.jpg" alt="Badge" class="img-fluid" style="width: 80px;">
                                 </div>
-                                <h5 class="lh-base text-uppercase mb-0">Certified Physician & Team</h5>
+                                <h5 class="lh-base text-uppercase mb-0">Board Certified Physician</h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center">
                                 <div class="flex-shrink-0 btn-xl-square bg-light me-3">
-                                    <i class="fa fa-tachometer-alt fa-2x text-primary"></i>
+                                    <img src="../img/time.jpg" alt="Badge" class="img-fluid" style="width: 80px;">
                                 </div>
                                 <h5 class="lh-base text-uppercase mb-0">Timely & Reliable Appointments</h5>
                             </div>
