--- a/about/our-team.html
+++ b/about/our-team.html
@@ -143,14 +143,16 @@
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-1">Dr. Agyenim Amoako</h5>
-                            <span>Co-Founder / MD, FAAFP</span><br>
+                            <span>Co-Founder / MD, FAAFP, DABFM</span><br>
                         </div>
                         <div class="text-center p-4 bg-grey">
                             <details>
                                 <summary class="btn btn-primary mb-3">Read Profile</summary>
                                 <p>
-                                   Dr. Amoako, a highly skilled physician, possesses a background in Biology and Chemistry from 
-                                   Delaware State University and a medical degree from Ross University School of Medicine. With 
+                                   Dr. Amoako, a highly accomplished and skilled physician, board-certified in family medicine, 
+                                   Diplomate of the American Board of Family Medicine, and a fellow of the American Academy of Family 
+                                   Physicians, possesses a strong educational foundation in Biology and Chemistry from Delaware State 
+                                   University and a medical degree from Ross University School of Medicine. With 
                                    over a decade of practical experience in primary and occupational healthcare, Dr. Amoako 
                                    completed his Family Medicine Residency at the University of Arkansas for Medical Sciences(UAMS).
                                     During his tenure at UAMS, Dr. Amoako served as chief resident, acquiring valuable knowledge 
