--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             Firm Foundation Health & Wellness Center
                         </h1>
                         <p class="lead text-white mb-4 animated fadeIn">
-                            On Christ the solid Rock I stand, all other ground is sinking sand. <span class="text-primary">Psalm 62:2</span>
+                            On Christ the solid Rock We stand, all other ground is sinking sand. <span class="text-primary">Psalm 62:2</span>
                         </p>
                         <a href="about/about-firm-foundation.html" class="btn btn-primary rounded-pill py-3 px-4">About Us</a>
                     </div>
@@ -187,15 +187,15 @@
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center">
                                 <div class="flex-shrink-0 btn-xl-square bg-light me-3">
-                                    <i class="fa fa-users-cog fa-2x text-primary"></i>
+                                    <img src="img/badge.jpg" alt="Badge" class="img-fluid" style="width: 80px;">
                                 </div>
-                                <h5 class="lh-base text-uppercase mb-0">Certified Physician & Team</h5>
+                                <h5 class="lh-base text-uppercase mb-0">Board Certified Physician</h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center">
                                 <div class="flex-shrink-0 btn-xl-square bg-light me-3">
-                                    <i class="fa fa-tachometer-alt fa-2x text-primary"></i>
+                                    <img src="img/time.jpg" alt="Badge" class="img-fluid" style="width: 80px;">
                                 </div>
                                 <h5 class="lh-base text-uppercase mb-0">Timely & Reliable Appointments</h5>
                             </div>
