--- a/our-membership.html
+++ b/our-membership.html
@@ -94,7 +94,7 @@
                             </div>
                         </div>
                         <a href="our-services.html" class="nav-item nav-link">Services</a>
-                        <a href="our-membership.html" class="nav-item nav-link active">Membership</a>
+                        <a href="#" class="nav-item nav-link active">Membership</a>
                         <a href="our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
@@ -128,22 +128,49 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Check Here for Updates</h1>
-                    <p class="mb-4">
-                        Stay tuned for the latest news and updates about our membership program.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="index.html">Go Back To Home</a>
-                </div>
+    <!-- Membership Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp mb-4" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">We Do Not Offer Memberships Yet</h1>
+                <p>
+                    Even though we do not offer memberships at this time, we are committed to providing exceptional care
+                    and services to all our patients at affordable rates.
+                    We encourage you to explore our wide range of healthcare services designed to meet your needs.
+                </p>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Our Pricing</h1>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b class="me-3">Intake :</b> $150.
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b class="me-3">53-60 minute visit :</b> $125(Follow-up).
+                </p>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Sliding Scale:</h1>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b class="me-3">Below $30,000 :</b> $65 per visit.
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b class="me-3">$30,000 - $44,999 :</b> $80 per visit.
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b class="me-3">$45,000 - $59,999 :</b> $90 per visit.
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b class="me-3">$60,000 - $74,999 :</b> $110 per visit.
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b class="me-3">$75,000 and Above :</b> $125 per visit.
+                </p>
+                <p class="fs-6">NOTE: Exceptions may apply.</p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Membership End -->
 
 
     <!-- Footer Start -->
