--- a/our-services.html
+++ b/our-services.html
@@ -223,7 +223,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/asthma-kid.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/asthma.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Asthma Management</h5>
                             </div>
