--- a/services/asthma-management.html
+++ b/services/asthma-management.html
@@ -145,7 +145,7 @@
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/asthma-kid.jpg" alt="">
+                    <img class="img-fluid" src="../img/services/asthma-kid-with-mother.jpg" alt="">
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="owl-carousel testimonial-carousel">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/breathing.jpg" alt="">
+                    <img class="img-fluid" src="../img/services/asthma.jpg" alt="">
                 </div>
             </div>
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.5s" style="max-width: 600px;">
