--- a/about/about-firm-foundation.html
+++ b/about/about-firm-foundation.html
@@ -99,7 +99,9 @@
                         <a href="../our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="#" class="btn btn-primary rounded-pill py-2 px-3">Book Appointment</a>
+                        <a href="https://form.jotform.com/252531501064546" class="btn btn-primary rounded-pill py-2 px-3" target="_blank">
+                            Book Appointment
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -141,7 +143,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
-                        Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
+                        Firm Foundation LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
                         comprehensive medical and mental health services in Kent County, Delaware. Our mission is to deliver exceptional,
                         holistic care in a centralized location, facilitating seamless coordination and continuity of patient care. Our
                         approach is rooted in personalized care plans designed to meet the unique needs of each patient, fostering overall
@@ -400,6 +402,9 @@
 
     <!-- Template Javascript -->
     <script src="../js/main.js"></script>
+
+    <!-- JotForm Integration -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/0199378fb1807abc9a7ce9ae3db13a78bf58/embed.js'></script>
 </body>
 
 </html>
