--- a/services/dot-exams.html
+++ b/services/dot-exams.html
@@ -99,7 +99,9 @@
                         <a href="../our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="#" class="btn btn-primary rounded-pill py-2 px-3">Book Appointment</a>
+                        <a href="https://form.jotform.com/252531501064546" class="btn btn-primary rounded-pill py-2 px-3" target="_blank">
+                            Book Appointment
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -212,7 +214,6 @@
                         Friendly reminders for renewal—certificates are typically valid for up to 2 years
                     </b>
                 </p>
-                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
             <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
                 <h1>Who Needs a DOT Exam?</h1>
@@ -220,7 +221,7 @@
                     If you operate a commercial motor vehicle (CMV)—including trucks, buses, or delivery vans — 
                     you're required to pass a DOT physical to obtain or renew your Commercial Driver's License (CDL).
                 </p>
-                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
+                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your First Session</a>
             </div>
         </div>
     </div>
@@ -298,6 +299,9 @@
 
     <!-- Template Javascript -->
     <script src="../js/main.js"></script>
+
+    <!-- JotForm Integration -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/0199378fb1807abc9a7ce9ae3db13a78bf58/embed.js'></script>
 </body>
 
 </html>
