--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                         <a href="our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="#" class="btn btn-primary rounded-pill py-2 px-3">Book Appointment</a>
+                        <a href="https://form.jotform.com/252531501064546" class="btn btn-primary rounded-pill py-2 px-3" target="_blank">
+                            Book Appointment
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -130,7 +132,7 @@
                             Firm Foundation Health & Wellness Center
                         </h1>
                         <p class="lead text-white mb-4 animated fadeIn">
-                            On Christ the solid Rock We stand, all other ground is sinking sand. <span class="text-primary">Psalm 62:2</span>
+                            On Christ the solid Rock We stand, all other ground is sinking sand. <span class="text-light">Psalm 62:2</span>
                         </p>
                         <a href="about/about-firm-foundation.html" class="btn btn-primary rounded-pill py-3 px-4">About Us</a>
                     </div>
@@ -177,7 +179,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
-                        Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
+                        Firm Foundation LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
                         comprehensive medical and mental health services in Kent County, Delaware. Our mission is to deliver exceptional,
                         holistic care in a centralized location, facilitating seamless coordination and continuity of patient care. Our
                         approach is rooted in personalized care plans designed to meet the unique needs of each patient, fostering overall
@@ -343,7 +345,7 @@
     <!-- Service End -->
 
 
-    <!-- Appointment Start -->
+    <!-- Contact Start -->
     <div class="container-fluid appoinment py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container pt-5">
             <div class="row gy-5 gx-0">
@@ -380,7 +382,7 @@
                 </div>
                 <div class="col-lg-6 mb-n5 wow fadeIn" data-wow-delay="0.7s">
                     <div class="bg-white p-5">
-                        <h2 class="text-uppercase mb-4">Appointment Form</h2>
+                        <h2 class="text-uppercase mb-4">Contact Form</h2>
                         <div class="row g-3">
                             <div class="col-sm-12">
                                 <div class="form-floating">
@@ -420,7 +422,7 @@
             </div>
         </div>
     </div>
-    <!-- Appointment End -->
+    <!-- Contact End -->
 
 
     <!-- Footer Start -->
@@ -517,6 +519,9 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- JotForm Integration -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/0199378fb1807abc9a7ce9ae3db13a78bf58/embed.js'></script>
 </body>
 
 </html>
