--- a/our-contact.html
+++ b/our-contact.html
@@ -98,7 +98,9 @@
                         <a href="our-contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="#" class="btn btn-primary rounded-pill py-2 px-3">Book Appointment</a>
+                        <a href="https://form.jotform.com/252531501064546" class="btn btn-primary rounded-pill py-2 px-3" target="_blank">
+                            Book Appointment
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -323,6 +325,9 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- JotForm Integration -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/0199378fb1807abc9a7ce9ae3db13a78bf58/embed.js'></script>
 </body>
 
 </html>
