--- a/services/screening.html
+++ b/services/screening.html
@@ -99,7 +99,9 @@
                         <a href="../our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="#" class="btn btn-primary rounded-pill py-2 px-3">Book Appointment</a>
+                        <a href="https://form.jotform.com/252531501064546" class="btn btn-primary rounded-pill py-2 px-3" target="_blank">
+                            Book Appointment
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -250,7 +252,7 @@
                     you're managing a chronic condition or simply staying proactive, regular checkups are a vital 
                     part of your wellness journey.
                 </p>
-                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
+                <a class="btn btn-primary" href="https://form.jotform.com/252531501064546" target="_blank">Schedule Your First Session</a>
             </div>
         </div>
     </div>
@@ -328,6 +330,9 @@
 
     <!-- Template Javascript -->
     <script src="../js/main.js"></script>
+
+    <!-- JotForm Integration -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/0199378fb1807abc9a7ce9ae3db13a78bf58/embed.js'></script>
 </body>
 
 </html>
